// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ellipse > behaviour > draws ellipse with mousemove 1`] = `
<body>
  <div>
    <ellipse
      class="shape"
      cx="75"
      cy="75"
      rx="25"
      ry="25"
    />
    <rect
      class="hitbox"
      height="86"
      width="86"
      x="32"
      y="32"
    />
    <rect
      class="bounding"
      height="54"
      width="54"
      x="48"
      y="48"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Ellipse > rendering > renders with given drawingGeometry 1`] = `
<body>
  <div>
    <ellipse
      class="shape too-small"
      cx="100"
      cy="100"
      rx="0"
      ry="0"
    />
    <rect
      class="hitbox"
      height="36"
      width="36"
      x="82"
      y="82"
    />
    <rect
      class="bounding"
      height="4"
      width="4"
      x="98"
      y="98"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Ellipse > rendering > renders with the given geometry 1`] = `
<body>
  <div>
    <ellipse
      class="shape"
      cx="100"
      cy="100"
      rx="30"
      ry="20"
    />
    <rect
      class="hitbox"
      height="76"
      width="96"
      x="52"
      y="62"
    />
    <rect
      class="bounding"
      height="44"
      width="64"
      x="68"
      y="78"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Ellipse > rendering > renders with the given key and selected state 1`] = `
<body>
  <div>
    <ellipse
      class="shape"
      cx="100"
      cy="100"
      rx="30"
      ry="20"
    />
    <rect
      class="hitbox"
      height="76"
      width="96"
      x="52"
      y="62"
    />
    <rect
      class="bounding"
      height="44"
      width="64"
      x="68"
      y="78"
    />
    
    <g
      class="resize-hitbox-container"
    >
      <rect
        class="resize-square"
        height="10"
        width="10"
        x="127"
        y="117"
      />
      <rect
        class="resize-hitbox"
        height="88"
        width="88"
        x="88"
        y="78"
      />
    </g>
    
    
    
  </div>
</body>
`;
